--- a/proposal/jensen-pres.org
+++ b/proposal/jensen-pres.org
@@ -15,7 +15,7 @@
 #+startup: beamer
 #+LaTeX_CLASS: beamer
 
-#+options: H:2
+#+options: H:3
 #+latex_class: beamer
 #+LaTeX_CLASS_OPTIONS: [presentation, aspectratio=1610]
 #+columns: %45ITEM %10 BEAMER_env(Env) %10BEAMER_act(Act) %4BEAMER_col(Col) %8BEAMER_opt(Opt)
@@ -23,17 +23,18 @@
 #+latex_header: \usetheme[progressbar=foot]{metropolis}
 #+latex_header_extra: \usepackage{caption}
 #+latex_header_extra: \captionsetup[figure]{labelformat=empty}
+#+latex_header_extra: \AtBeginSubsection{\begin{frame}\tableofcontents[currentsection,currentsubsection]\end{frame}}
 #+beamer_color_theme:
 #+beamer_font_theme:
 #+beamer_inner_theme:
 #+beamer_outer_theme:
 
 * Introduction
-** Acknowledgments
+*** Acknowledgments
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 * Motivation
-** The Problem
-*** :BMCOL:
+*** The Problem
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
@@ -41,41 +42,41 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
   + Instability, pain, unnatural [cite:@bakerRolePainFunction2007; @bournePatientSatisfactionTotal2010; @scottPredictingDissatisfactionFollowing2010].
 + No reliable method of clinically assessing and quantifying joint dynamics.
   + Too much human supervision, too time consuming
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
 #+ATTR_LaTeX: :width \textwidth
 [[file:~/repo/lit-review/figures/raster/Physical_Examination_of_the_knee.jpg]]
-** Our Proposition
-*** :BMCOL:
+*** Our Proposition
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
 Orthopaedic surgeons and clinicians would readily adopt a practical and inexpensive technology that allows them to measure a patient's knee kinematics during activities of daily living.
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.55
 :END:
 #+ATTR_LaTeX: :width 2in
 [[file:~/repo/lit-review/figures/raster/dynamic-knee-prescription.png]]
-** Constraints
-*** :BMCOL:
+*** Constraints
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.45
 :END:
 + It must fit within a standard clinical workflow
 + The technology must utilize equipment commonly found in hospitals
 + There must not be significant human supervision nor interaction to generate an examination report.
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.55
 :END:
 #+ATTR_LaTeX: :width \textwidth
 [[file:~/repo/lit-review/figures/raster/c-arm-fluoro-machine.jpg]]
 * Background
-** Rigid Body Transformations
-*** Translation :B_block:
+*** Rigid Body Transformations
+**** Translation :B_block:
 :PROPERTIES:
 :BEAMER_env: block
 :END:
@@ -104,8 +105,8 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{aligned}
 \end{equation*}
 #+end_src
-** Rigid Body Transformations
-*** Rotations :B_block:
+*** Rigid Body Transformations
+**** Rotations :B_block:
 :PROPERTIES:
 :BEAMER_env: block
 :END:
@@ -133,8 +134,8 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
   \end{aligned}
 \end{equation*}
 #+end_src
-** Rigid Body Transformations
-*** Homogeneous Transformation Matrices :B_block:
+*** Rigid Body Transformations
+**** Homogeneous Transformation Matrices :B_block:
 :PROPERTIES:
 :BEAMER_env: block
 :END:
@@ -151,8 +152,8 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{equation*}
 #+end_src
 Now we have a notation that allows us to describe arbitrary movement between reference frames.
-** Projective Geometry
-*** :BMCOL:
+*** Projective Geometry
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
@@ -183,12 +184,12 @@ Where
 
 {\tiny Note: We are still in the camera's reference frame}
 #+end_src
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
 [[file:~/repo/lit-review/figures/raster/perspective-projection.png]]
-** Pixel Coordinates
+*** Pixel Coordinates
 Convert camera coordinates into image coordinates.
 #+begin_src latex
 \begin{equation*}
@@ -205,13 +206,13 @@ Where
   \end{aligned}
 \end{equation*}
 #+end_src
-** Model-Image Registration
-*** :BMCOL:
+*** Model-Image Registration
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
 If we know the projective parameters of the fluoroscopy machine, can we tinker with $T^{cam}_{implant}$ so that our virtual projection matches the fluoroscopic image?
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
@@ -219,22 +220,22 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 #+CAPTION:From [cite:@mahfouzRobustMethodRegistration2003]
 file:~/repo/lit-review/figures/raster/mahfouz-perspective-projection.png
 * Historical Methods
-** Overview
+*** Overview
 Many different approaches have attempted to solve the model-image registration problem.
 + Pre-computed projections
 + Skin-mounted motion Capture
 + Biplane Imaging
 + Iterative Projections
 + Model-based Roentgen Stereophotogrammetry
-** Pre-Computed Projections
-*** :BMCOL:
+*** Pre-Computed Projections
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
 + Saving space and memory by pre-computing as much as possible.
 + Pre-computed distance maps [cite:@zuffiModelbasedMethodReconstruction1999; @lavalleeRecoveringPositionOrientation1995].
 + Pre-computed shape libraries [cite:@banksAccurateMeasurementThreedimensional1996]
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
@@ -245,12 +246,12 @@ Many different approaches have attempted to solve the model-image registration p
 #+ATTR_LaTeX: :width 1.75in
 #+CAPTION: From [cite:@banksAccurateMeasurementThreedimensional1996]
 [[file:~/repo/lit-review/figures/raster/banks-nfd-library.png]]
-** Limitations of Pre-Computed Projections
+*** Limitations of Pre-Computed Projections
 + Requires an accurate contour from the input image in order to perform calculations.
   + Human supervision vs. inaccuracy.
 
-** Motion Capture (MoCap)
-*** :BMCOL:
+*** Motion Capture (MoCap)
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
@@ -258,7 +259,7 @@ Many different approaches have attempted to solve the model-image registration p
 + Skin-mounted [cite:@gaoInvestigationSoftTissue2008; @kuoInfluenceSoftTissue2011; @linEffectsSoftTissue2016].
 + Bone pins [cite:@lafortuneThreedimensionalKinematicsHuman1992] (any volunteers?).
 
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
@@ -269,14 +270,14 @@ Many different approaches have attempted to solve the model-image registration p
 #+ATTR_LaTeX: :width 2.5in
 #+CAPTION: From [cite:@lafortuneThreedimensionalKinematicsHuman1992]
 [[file:~/repo/lit-review/figures/raster/lafortune-bone-mocap.png]]
-** Limitations of Motion Capture
+*** Limitations of Motion Capture
 Skin Mounted
 + Doesn't accurately describe underlying skeletal motion with clinical accuracy [cite:@gaoInvestigationSoftTissue2008; @kuoInfluenceSoftTissue2011; @linEffectsSoftTissue2016].
 Bone Pins
 + Bone Pins
 + Need I say more?
-** Biplane Imaging
-*** :BMCOL:
+*** Biplane Imaging
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
@@ -284,7 +285,7 @@ Bone Pins
 + Utilizes multiple cameras to resolve 3D position and orientation[cite:@ivesterReconfigurableHighSpeedStereoRadiography2015; @burtonAutomaticTrackingHealthy2021].
   + Highly accurate.
   + Gold Standard.
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
@@ -295,19 +296,19 @@ Bone Pins
 #+ATTR_LaTeX: :width 1.75in
 #+CAPTION:
 [[file:~/repo/lit-review/figures/raster/ivester-stereo-projection.png]]
-** Limitations of Biplane Imaging
+*** Limitations of Biplane Imaging
 + Not many hospitals have biplane fluoroscopy setups.
 + Clinically impractical
 
-** Iterative Projections
-*** :BMCOL:
+*** Iterative Projections
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.54
 :END:
 + Take advantage of modern computational graphics pipelines to quickly perform projection matching.
   + Image/Intensity similarity metrics [cite:@mahfouzRobustMethodRegistration2003]
   + Feature/Contour similarity metrics [cite:@floodAutomatedRegistration3D2018]
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
@@ -317,15 +318,15 @@ Bone Pins
 #+ATTR_LaTeX: :width 2in
 #+CAPTION: From [cite:@floodAutomatedRegistration3D2018]
 [[file:~/repo/lit-review/figures/raster/flood-dilated-contour.png]]
-** Limitations of (historic) Iterative Projection Methods
+*** Limitations of (historic) Iterative Projection Methods
 + Requires human supervision for:
   + Pose initialization
   + Escaping local minima
   + Implant detection
 + Chaotic and Noisy objective function
 
-** Model-based Roentgen Stereophotogrammetry (MBRSA)
-*** :BMCOL:
+*** Model-based Roentgen Stereophotogrammetry (MBRSA)
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
@@ -333,70 +334,65 @@ Bone Pins
 + Extremely accurate [cite:@kapteinEvaluationThreePose2004; @saariKneeKinematicsMedial2005]
 + Gold standard Measurement [cite:@brobergValidationMachineLearning2023]
 
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
 #+ATTR_latex: :width 3in
 #+CAPTION: From [cite:@vroomanFastAccurateAutomated1998]
 [[file:~/repo/lit-review/figures/raster/vrooman-mbrsa.png]]
-** Limitations of MBRSA
+*** Limitations of MBRSA
 + Involves additional surgical procedures for inserting tantalum beads
 + Human supervision
 + Typically requires bi-plane imaging.
 
-* Aims :B_ignoreheading:
-:PROPERTIES:
-:BEAMER_env: ignoreheading
-:END:
-** Aims page
-Aims
-** Aims
-*** Aims 1/2 :B_block:BMCOL:
+* Aims
+*** Aims
+**** Aims 1/2 :B_block:BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.3
 :BEAMER_env: block
 :END:
 Joint Track Machine Learning and Overcoming Single-Plane Limitations
-*** Aim 3/4 :B_block:BMCOL:
+**** Aim 3/4 :B_block:BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.3
 :BEAMER_env: block
 :END:
 Pilot Trials and Standardized Kinematics Exam
-*** Aim 5 :B_block:BMCOL:
+**** Aim 5 :B_block:BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.3
 :BEAMER_env: block
 :END:
 Joint Track Auto Toolkit
 
-* Aim 1 - Joint Track Machine Learning
-** Goal
+** Aim 1 - Joint Track Machine Learning
+*** Goal
 Demonstrate the feasibility of a fully autonomous, model-image registration pipeline.
-** Method
+*** Method
 + Three-tiered approach
   + Convolutional Neural networks (CNN) for autonomous implant detection
   + Normalized Fourier Descriptor shape libraries
   + Robust contour-based global optimization scheme
 [[file:~/repo/lit-review/figures/raster/pipeline-nocite.png]]
-** Autonomous Implant Detection Using Convolutional Neural Networks
+*** Autonomous Implant Detection Using Convolutional Neural Networks
 
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
 + 2 CNNs
   + Femoral and Tibial implants
 + High Resolution Network [cite:@wangDeepHighResolutionRepresentation2020]
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
 #+ATTR_latex: :width \columnwidth
 [[file:~/repo/lit-review/figures/raster/jtml-segmentation.png]]
-** Neural Network Data
-*** :BMCOL:
+*** Neural Network Data
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
@@ -404,24 +400,24 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
   + 7 TKA kinematics studies
   + PUT DATA INFO HERE!!!!!
 
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.6
 :END:
 #+ATTR_latex: :height 3in
 [[file:~/repo/lit-review/figures/raster/jtml-data.png]]
-** Neural Network Robustness
+*** Neural Network Robustness
 + Additional augmentations introduced during training [cite:@buslaevAlbumentationsFastFlexible2020].
 [[file:~/repo/lit-review/figures/raster/augmentations.png]]
-** Normalized Fourier Descriptor Shape Libraries
-*** :BMCOL:
+*** Normalized Fourier Descriptor Shape Libraries
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.37
 :END:
 + Pose initialization using segmentation output.
 + $\pm 30^{\circ}$ library span at $3^{\circ}$ increments.
 
-*** :BMCOL:
+**** :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.7
 :END:
@@ -429,8 +425,13 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 [[file:~/repo/lit-review/figures/raster/banks-nfd-library.png]]
 #+ATTR_latex: :width 3.25in
 [[file:~/repo/lit-review/figures/raster/jtml-nfd.png]]
+** Aim 2 - Overcoming Single-Plane Symmetry Traps
+** Aim 3 - Pilot Human Study
+** Aim 4 - Standardized Kinematics Exam
+** Aim 5 - Joint Track Auto Toolkit
+
 * References
-** References
+*** References
 :PROPERTIES:
 :BEAMER_OPT: fragile, allowframebreaks, label=
 :END:
